--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "counter-cloude",
+  "name": "uplianceai",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,18 +10,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@react-spring/web": "^9.7.5",
+    "@chakra-ui/react": "^3.5.1",
+    "@clerk/clerk-react": "^5.22.10",
+    "@clerk/react-router": "^1.0.5",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.4.2",
+    "@nextui-org/react": "^2.6.11",
+    "@reduxjs/toolkit": "^2.5.1",
     "@tailwindcss/vite": "^4.0.3",
     "chart.js": "^4.4.7",
-    "firebase": "^11.2.0",
+    "framer-motion": "^12.0.6",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
-    "react-firebase-hooks": "^5.1.1",
     "react-quill": "^2.0.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.5",
     "react-spring": "^9.7.5",
-    "recharts": "^2.15.1",
     "tailwindcss": "^4.0.3",
     "uuid": "^11.0.5"
   },
